--- a/conference/NetConf2019/xdp-feature-detection.org
+++ b/conference/NetConf2019/xdp-feature-detection.org
@@ -131,19 +131,33 @@ If BPF /load time/ check is possible
 - This could be the userspace API, which is a probe-API
 - Similar to '=bpftool feature=' command that probe-loads BPF-progs
 
-* Slide: One option left: BPF-load time ifindex binding              :export:
+* Slide: BPF-load time ifindex binding (possible???)                 :export:
 
+General idea (like HW-offload): /Supply ifindex at BPF load time/
+- Discuss if this will work... and howto handle pitfalls?
 
-TODO: Expand on using HW-offload ifindex load-time binding
-- Can this cover all the cases?
-
-Our old nemesis: tail-call maps
-- Case#1: ifindex bound XDP-prog use tail-call mapping
-  - Issue: what stops adding a non-ifindex XDP-prog to a tail-call-map?
+Our old nemesis: *tail-call* maps
+- Case#1: ifindex bound XDP-prog use tail-call (map)
+  - Issue: what stops adding non-ifindex XDP-prog to this tail-call-map?
 - Case#2: Can NIC-A XDP-prog tail-call XDP-prog bound to NIC-B?
 
-Pitfall: Generic-XDP
+Pitfall: *Generic-XDP*
 - At BPF load time, don't know if used for native or generic-XDP
+
+Challenge: only input is ifindex
+- *How to supply or detect features?*
+
+* Slide: Can verifier detect XDP features?                           :export:
+
+Either need to /supply features/ (more input than =ifindex=)
+- Or verifier need to be-able detect features
+
+Verifier: If XDP return code comes from register/map
+- Assume all XDP-return codes in use
+- Except: can remove XDP_REDIRECT if redirect-helper isn't used
+
+Again: What if BPF-prog is only used for generic-XDP?
+- Are we forced to supply more than =ifindex= ?
 
 * Slide: Extra slides                                                :export:
 
