NetConf2019/xdp-metadata-discussioni: Slide: Other HW-offloads
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/NetConf2019/xdp-metadata-discussion.org
+++ b/conference/NetConf2019/xdp-metadata-discussion.org
@@ -91,8 +91,24 @@ The =xdp_frame= is placed in top of data-frame (=data_hard_start=)
 - Currently 32-bytes
 
 Issue: *SKB*'s created this way are /lacking HW-offloads/ like:
-- HW checksum info (for =skb->ip_summed= + =skb->csum=)
-- HW RX hash (=skb_set_hash(hash, type)=)
+- HW /checksum/ info (for =skb->ip_summed= + =skb->csum=)
+- HW /RX hash/ (=skb_set_hash(hash, type)=)
+- (these are almost always needed... tempted to extend =xdp_frame=)
+
+** Slide: Other HW-offloads
+
+Other /existing/ offloads, used by SKBs, but *not always enabled*
+ - /VLAN/ (=__vlan_hwaccel_put_tag()=)
+ - RX /timestamp/
+   - HW =skb_hwtstamps()= (stored in skb_shared_info)
+   - Earlier XDP software timestamp (for =skb->tstamp=)
+ - RX /mark/ (=skb->mark= supported by mlx5)
+
+Other *potential* offloads, which hardware can do, but not used
+ - Unique u64 /flow identifier/ key (mlx5 HW)
+ - Higher-level protocol header offsets
+   - RSS-hash can deduce e.g. IPv4/TCP (as frag not marked as TCP)
+   - But NIC HW have full parse info avail
 
 Quest: How to transfer this info?
 - In a more generic and dynamic way...
